[project]
name = "vistl"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Ranko Veselinovic", email = "ranko.veselinovic@mgb.ch" }
]
requires-python = ">=3.14"
dependencies = [
    "pdfplumber>=0.11.8",
]

[project.scripts]
vistl = "vistl.cli:main"

[build-system]
requires = ["uv_build>=0.9.12,<0.10.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "pyright>=1.1.407",
]
